- removed test values - removed commented out character case change - added in ergodox qwerty layout - added fixed shift difference for letter case (also chekced all existing keyboard maps for completness in this aspect) - added ergodox template for future mappings - fixed space position for existing keymaps

--- a/app/style.css
+++ b/app/style.css
@@ -48,6 +48,7 @@ html{height:100%}body{height:100%;overflow:auto;font-family:Helvetica,Arial,Sans
             }
             li {
                 font-weight:normal;
+				font-size:50%;
                 display:inline;
                 padding:10px 15px 10px 15px;
                 background-color:#98c8f7;
